--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #503d57;
+  background-color: cornflowerblue;
+  color: aliceblue;
 }
 
 code {
